--- a/public/index.html
+++ b/public/index.html
@@ -25,14 +25,14 @@
     </header>
     <main class="container">
         <h2>Example creation usage:</h2>
-        <p><code>https://jj-url.herokuapp.com/new/https://www.google.com</code></p>
-        <p><code>https://jj-url.herokuapp.com/new/http://foo.com:8</code></p>
+        <p><code>https://jjurl.herokuapp.com/new/https://www.google.com</code></p>
+        <p><code>https://jjurl.herokuapp.com/new/http://foo.com:8</code></p>
         <br>
         <h2>Example creation output:</h2>
-        <p><code>{ "original_url":"http://foo.com:80", "short_url":"https://jj-url.herokuapp.com/8170" }</code></p>
+        <p><code>{ "originalUrl":"http://foo.com:80", "shortUrl":"https://jj-url.herokuapp.com/817d0" }</code></p>
         <br>
         <h2>Usage:</h2>
-        <p><code>https://jj-url.herokuapp.com/2871</code></p>
+        <p><code>https://jjurl.herokuapp.com/287f1</code></p>
         <br>
         <h2>Will redirect to:</h2>
         <p><code>https://www.google.com/</code></p>
