--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,10 @@
         <p><code>https://jjurl.herokuapp.com/new/http://foo.com:8</code></p>
         <br>
         <h2>Example creation output:</h2>
-        <p><code>{ "originalUrl":"http://foo.com:80", "shortUrl":"https://jj-url.herokuapp.com/817d0" }</code></p>
+        <p><code>{ "originalUrl":"http://foo.com:80", "shortUrl":"https://jjurl.herokuapp.com/817d0" }</code></p>
         <br>
         <h2>Usage:</h2>
-        <p><code>https://jjurl.herokuapp.com/287f1</code></p>
+        <p><code>https://jjurl.herokuapp.com/51bca</code></p>
         <br>
         <h2>Will redirect to:</h2>
         <p><code>https://www.google.com/</code></p>
